fixed hamburger checkbox z-index + hover

--- a/styles/_hamburger_menu.scss
+++ b/styles/_hamburger_menu.scss
@@ -6,7 +6,6 @@
   position: absolute;
   right: 0;
   transform: translateY(300%);
-  z-index: 1;
 
   &:first-child {
     margin-top: 8px;
@@ -21,7 +20,6 @@
   opacity: 0;
   position: absolute;
   right: 0;
-  z-index: 1;
 
   // On hamburger toggle
   &:checked ~ label .menu-slice {
@@ -44,4 +42,9 @@
   height: calc(4px * 3 + 8px * 2);
   position: absolute;
   right: 0;
+  z-index: 1;
+  
+  &:hover {
+    cursor: pointer;
+  }
 }
